--- a/tmux.conf
+++ b/tmux.conf
@@ -72,3 +72,8 @@ bind-key C-l resize-pane -R
  
 # use vim motion keys while in copy mode
 setw -g mode-keys vi
+
+set-option -g default-command "reattach-to-user-namespace -l zsh"
+
+bind-key C-c run-shell 'tmux save-buffer - | reattach-to-user-namespace pbcopy'
+#bind-key C-v run-shell 'reattach-to-user-namespace pbpaste | tmux load-buffer - \; paste-buffer -d'
