--- a/.gitmodules
+++ b/.gitmodules
@@ -309,6 +309,9 @@
 [submodule "vim/bundle/skwp-vim-powerline"]
 	path = vim/bundle/skwp-vim-powerline
 	url = https://github.com/skwp/vim-powerline.git
+[submodule "zsh/prezto"]
+	path = zsh/prezto
+	url = https://github.com/sorin-ionescu/prezto.git
   ignore = dirty
 [submodule "vim/bundle/dag-vim2hs"]
 	path = vim/bundle/dag-vim2hs
