--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -22,10 +22,10 @@ bind -r L resize-pane -R 5
 
 # Smart pane switching with awareness of vim splits.
 # Source: https://github.com/christoomey/vim-tmux-navigator
-bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
-bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
-bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
-bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
+#bind -n C-h run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-h) || tmux select-pane -L"
+#bind -n C-j run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-j) || tmux select-pane -D"
+#bind -n C-k run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-k) || tmux select-pane -U"
+#bind -n C-l run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys C-l) || tmux select-pane -R"
 bind -n C-\ run "(tmux display-message -p '#{pane_current_command}' | grep -iqE '(^|\/)g?(view|vim?)(diff)?$' && tmux send-keys 'C-\\') || tmux select-pane -l"
 
 # Use vi keybindings for tmux commandline input.
@@ -62,22 +62,27 @@ set -g window-status-current-format "#[fg=colour234,bg=colour39]⮀#[fg=black,bg
 set-option -g default-command "which reattach-to-user-namespace > /dev/null && reattach-to-user-namespace -l $SHELL || $SHELL"
 
 # Screen like binding
-unbind C-b
-set -g prefix C-a
-bind a send-prefix
+#unbind C-b
+#set -g prefix C-a
+#bind a send-prefix
 
 # No escape time for vi mode
 set -sg escape-time 0
 
 # Screen like binding for last window
 unbind l
-bind C-a last-window
+#bind C-a last-window
 
 # Bigger history
 set -g history-limit 10000
 
 # New windows/pane in $PWD
 bind c new-window -c "#{pane_current_path}"
+
+#new window splits
+unbind %
+bind | split-window -h
+bind - split-window -v
 
 # force a reload of the config file
 unbind r
